--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ethereum-input-data-decoder": "^0.1.1",
     "ethereumjs-abi": "^0.6.7",
     "ethers": "^4.0.27",
+    "mocha": "^6.0.2",
     "stellar-sdk": "^0.15.0",
     "web3": "^1.0.0-beta.51"
   }
